chore: make API URL and CORS origins configurable for deployment